# udp-data-val

./: .gitignore  README.md
Qt-full_task/client/: CMakeLists.txt  clientwindow.cpp  clientwindow.h  clientwindow.ui  main.cpp
Qt-full_task/server/: CMakeLists.txt  main.cpp  serverwindow.cpp  serverwindow.h  serverwindow.ui
boost-base_task/: CMakeLists.txt
boost-base_task/data/: limits.json
boost-base_task/src/: client.cpp  server.cpp
